# AlphaSanta

./: .gitignore  LICENSE  README.md  alphasanta_quick_reference.md  pyproject.toml
alphasanta/: __init__.py  config.py  schema.py
alphasanta/agentcard/: __init__.py  server.py
alphasanta/agents/: __init__.py  alpha.py  base.py  macro.py  micro.py  mood.py
alphasanta/app/: __init__.py  application.py
alphasanta/cli/: __init__.py  council_runner.py  macro_card.py  micro_card.py  mood_card.py  process_submissions.py  run_all_cards.py  santa_card.py  start.py  utils.py
alphasanta/infra/: monitoring.py
alphasanta/orchestrator/: __init__.py  elf_runner.py  queue.py
alphasanta/santa/: __init__.py  agent.py  coordinator.py  tracing.py  utils.py
alphasanta/services/: __init__.py  dissemination.py  persistence.py  submission_worker.py  turnkey_service.py
alphasanta/transports/: __init__.py  a2a.py  base.py  local.py
scripts/: manual_submit.py
tests/: debug_macro.py  test_dissemination.py  test_llm_connection.py  test_queue.py  test_santa_agent_parse.py  test_santa_coordinator.py  test_schema.py
